# provenance-audit

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  README.md  SC26-Poster-Bibliography.bib  SECURITY.md  pyproject.toml  requirements.txt
.github/: RELEASE_NOTES_v1.0.0.md
.github/workflows/: release.yml
docs/: REPRODUCING.md
outputs/: verify_subsample.csv  verify_subsample_30.csv  verify_worklist.csv  verify_worklist_30.csv  verify_worklist_30.xlsx  verify_worklist_30_CANONICAL.csv
outputs/corpus_100/: AdaptiveCpp.json  Arraymancer.json  Cirq.json  Computer-Science-Resources.json  FluidX3D.json  GPUMD.json  Grassmann.jl.json  Hamsters.js.json  How_to_optimize_in_GPU.json  Kratos.json  NNPACK.json  OpenFermion.json  ProjectQ.json  QPanda-2.json  Qrisp.json  QuSimPy.json  Qualtran.json  Quandoom.json  QuantumComputing.json  QuantumToolbox.jl.json  Quirk.json  ReCirq.json  ScaffCC.json  Stim.json  Trilinos.json  Yao.jl.json  _summary.json  amazon-braket-examples.json  amazon-braket-sdk-python.json  amgcl.json  amrex.json  awesome-AI-books.json  awesome-quantum-computing.json  awesome-quantum-machine-learning.json  awesome-quantum-ml.json  awesome-quantum-software.json  awesome-tensor-compilers.json  blis.json  blueqatSDK.json  (+82 more)
provenance_audit/: archives.py  collect.py  curate.py  figures.py  frame.py  framework.py  github.py  groundtruth.py  metadata.py  registries.py  score.py  subsample.py  util.py
registry/: corpus_100.yaml  corpus_a_projects.yaml  corpus_b_projects.yaml  corpus_drop.csv  corpus_keep.yaml  corpus_review.csv
(+215 files in other folders)
