[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "provenance-audit"
version = "1.0.0"
description = "Channel-based provenance assessment toolkit for HPC and quantum-computing open-source software (SC26 poster dataset)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
  { name = "Pengyin Shan", email = "pengyins@illinois.edu" },
]
keywords = [
  "software-supply-chain",
  "provenance",
  "hpc",
  "quantum-computing",
  "open-source-security",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
dependencies = [
  "requests==2.34.2",
  "PyYAML==6.0.3",
  "matplotlib==3.11.0",
  "numpy==2.4.6",
]

[project.urls]
Repository = "https://github.com/pengyin-shan/provenance-audit"

[tool.setuptools]
packages = ["provenance_audit"]
